--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,16 @@
-.card {
-	border-radius: 0 !important;
+.description {
+	font-size: initial;
+}
+
+html, body {
+  height: 100%;
+}
+
+.ui.grid {
+  height: 100%;
+}
+
+#loading_segment {
+	border: none;
+	margin-top: 30px; 
 }
