front end setup

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require semantic_ui/semantic.min
- *= require_self
  *= require home
+ *= require users
+ *= require sessions
+ *= require_self
  */
