--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <body>
     <%= render 'share/navbar' %>
+    <%= render 'users/new' %>
+    <%= render 'sessions/new' %>
     <%= yield %>
   </body>
 </html>
