user can like/unlike articles

--- a/app/views/articles/index.js.erb
+++ b/app/views/articles/index.js.erb
@@ -1,1 +1,1 @@
-$('#articles').append("<%= j render partial: 'share/group', locals: {articles: @articles} %>")
+$('#liked_articles').append("<%= j render partial: 'share/group', locals: {articles: @articles} %>")
