--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,13 @@
-<div class='ui container' id="articles">
-  <%= render partial: 'share/group', locals: {articles: @articles} %>
+<div class='ui container' id="liked_articles">
+  <h1 class="ui huge header aligned center">Liked articles</h1>
+  <%= render partial: 'share/group' %>
 </div>
 <div class="ui segment" id="loading_segment">
   <div class="ui loader"></div>
 </div>
 
-
 <script type="text/javascript">
   var page = 1
-  var searchTerm = "<%= params[:term] %>"
   var totalPages = <%= @articles.total_pages %>
   $(window).scroll(function() {
    if (isBottom()) {
@@ -17,7 +16,7 @@
       page += 1
       $.ajax({
         method: 'get',
-        url: '/search?term=' + searchTerm + '&page=' + page,
+        url: '/articles' + '?page=' + page,
         dataType: "script"
       }).done(function() {
          $( ".loader" ).removeClass('active')
