--- a/app/views/share/_article_card.html.erb
+++ b/app/views/share/_article_card.html.erb
@@ -10,8 +10,14 @@
   </div>
   <div class="extra content">
     <span class="left floated like">
-      <i class="like icon"></i>
-      Like
+      <% liked = current_user && @liked_ids.include?(article.id) ? 'liked' : '' %>
+      <% icon_click = current_user ? "toggleLike(#{article.id})" : '' %>
+      <i class="like icon <%= liked %>" id="article_icon_<%= article.id %>" onclick="toggleLike(<%= article.id %>)"></i>
+      <% if liked == '' %>
+        Like
+      <% else %>
+        Liked
+      <% end %>
     </span>
   </div>
 </div>
