--- a/app/views/share/_group.html.erb
+++ b/app/views/share/_group.html.erb
@@ -1,7 +1,7 @@
-<% articles.in_groups_of(3, false) do |row| %>
+<% @articles.in_groups_of(3, false) do |row| %>
   <div class="ui stackable three cards">
     <% row.each do |article| %>
-      <%= render partial: 'share/article_card', locals: {article: article} %>
+      <%= render partial: 'share/article_card', locals: { article: article } %>
     <% end %>
   </div>  
 <% end %>
