--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -23,3 +23,19 @@ html, body {
 	opacity: 1 !important;
 	color: #FF2733;
 }
+
+.article_link {
+	position: relative;
+}
+
+.article_link a {
+	position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #FFF;
+  opacity: 0;
+}
