admin can create, delete, edit articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
     <div class="image ui rounded">
       <img class="ui left float image" src="<%= @article.featured_image %>">
     </div>
-    <div class="content">
+    <div class="content" id="article_content">
       <%= @article.content %>
     </div>
   </div>
