--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,4 +27,10 @@
       })
     }}
   })
+
+  $('.like.icon').on('click', function() {
+    if ("<%= current_user %>" == '') {
+      $('#new_session_modal').modal('show')
+    }
+  })
 </script>
