hot fix open login

--- a/app/views/share/_article_card.html.erb
+++ b/app/views/share/_article_card.html.erb
@@ -13,7 +13,7 @@
   <div class="extra content">
     <span class="left floated like">
       <% liked = current_user && @liked_ids.include?(article.id) ? 'liked' : '' %>
-      <% icon_click = current_user ? "toggleLike(#{article.id})" : '' %>
+      <% icon_click = current_user ? "toggleLike(#{article.id})" : "handleHeartNotLogin(#{current_user})" %>
       <i class="like icon <%= liked %>" id="article_icon_<%= article.id %>" onclick="<%= icon_click %>"></i>
     </span>
   </div>
