fix duplicate email

--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -19,6 +19,7 @@
       </div>
       <div class="ui submit button">Submit</div>
       <div class="ui error message"></div>
+      <div class="error_field" id="new_user_error_message"></div>
     <% end %>
   </div>
 </div>
